--- a/styles.css
+++ b/styles.css
@@ -58,10 +58,10 @@
     flex: 2.5;
     display: flex;
     flex-direction: column; 
+    background-color: rgba(200, 200, 200, 0.1);
 }
 
 .textContainer{
-    background-color: rgba(200, 200, 200, 0.1);
     width: 100%;
     height: 25%;
 }
@@ -74,6 +74,30 @@
 }
 
 .formContainer{
-    height: 75%;
-    background-color: antiquewhite;
+    height: 40%;
+    background-color: white;
+    font-family: 'Roboto', sans-serif;
+    box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.25);
+}
+
+.button{
+    padding-top: 2rem;
+    padding-left: 50px;
+    font-family: 'Roboto', sans-serif;
+}
+
+button{
+    background-color: #596D48;
+    color: white;
+    font-weight: bold;
+    height: 3rem;
+    width: 20%;
+    border-radius: 0.5rem;
+    border: none;
+}
+
+.loginText{
+    padding-left: 50px;
+    padding-top: 1rem;
+    font-family: 'Roboto', sans-serif;
 }
