--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,11 @@
     background-color: white;
     font-family: 'Roboto', sans-serif;
     box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.25);
+    padding-left: 50px;
+}
+
+.formContainer h2{
+    padding-top: 1.5rem;
 }
 
 .button{
@@ -100,4 +105,44 @@ button{
     padding-left: 50px;
     padding-top: 1rem;
     font-family: 'Roboto', sans-serif;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+}
+
+.formRow{
+    display: flex;
+    padding: 0.75rem;
+    padding-left: 0;
+    gap: 5rem;
+}
+
+.formInput{
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem ;
+    font-size: 0.6rem;
+    font-weight: bold;
+}
+
+input{
+    height: 1.5rem;
+    border: .1px solid #E5E7EB;
+    border-radius: 0.25rem;
+    padding-left: 0.5rem;
+}
+
+input:focus{
+    outline: 1px solid blue;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.error{
+    outline: 1px solid red;
+}
+
+input+span{
+    color: red;
 }
